[gd_scene load_steps=11 format=2]

[ext_resource path="res://Cutscenes/SpikeGardenerCutscene.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Characters/SpikeGardenNPC/idle_lookback_nod.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Characters/SpikeGardenNPC/idle.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Characters/SpikeGardenNPC/idle_lookback.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 12, 29 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 12, 0, 12, 29 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 12, 29 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 36, 0, 12, 29 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "nod",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "lookback",
"speed": 5.0
} ]

[node name="SpikeGardenerCutscene" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Gardeners" type="Node2D" parent="."]

[node name="Gardener3" type="AnimatedSprite" parent="Gardeners"]
position = Vector2( 82, 49 )
frames = SubResource( 6 )

[node name="Gardener7" type="AnimatedSprite" parent="Gardeners"]
position = Vector2( -59, 49 )
scale = Vector2( -1, 1 )
frames = SubResource( 6 )

[node name="Gardener8" type="AnimatedSprite" parent="Gardeners"]
position = Vector2( -131, 49 )
scale = Vector2( -1, 1 )
frames = SubResource( 6 )

[node name="Gardener1" type="AnimatedSprite" parent="Gardeners"]
position = Vector2( -91, 49 )
scale = Vector2( -1, 1 )
frames = SubResource( 6 )

[node name="Gardener4" type="AnimatedSprite" parent="Gardeners"]
position = Vector2( 66, 49 )
frames = SubResource( 6 )

[node name="Gardener5" type="AnimatedSprite" parent="Gardeners"]
position = Vector2( 114, 49 )
frames = SubResource( 6 )

[node name="Gardener6" type="AnimatedSprite" parent="Gardeners"]
position = Vector2( 130, 49 )
frames = SubResource( 6 )

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
